Add no-empty-function rule

--- a/package.json
+++ b/package.json
@@ -57,7 +57,10 @@
     "parserOptions": {
       "ecmaVersion": 2020
     },
-    "rules": {},
+    "rules": {
+      "no-empty-function": "off",
+      "@typescript-eslint/no-empty-function": "off"
+    },
     "overrides": [
       {
         "files": [
